# django-admin-changeform-actions

./: .gitignore  README.md  manage.py  prek.toml  pyproject.toml  tox.ini
.github/workflows/: prek.yml  pytest.yml  tox.yml
changeform_actions/: __init__.py  admin.py  urls.py  views.py
changeform_actions/templates/admin/: actions_for_changeform.html  change_form.html
changeform_actions/templatetags/: changeform_actions.py
tests/: admin.py  settings.py  test_integration.py  tests.py  urls.py
