[project]
name = "django-admin-changeform-actions"
authors = [
  { name="Christoph Buelter", email="buelter.christoph@gmail.com" },
]
version = "0.5.1"
license = "MIT"
description = "Reuse model admin changelist actions on changeform pages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
]

[project.urls]
Homepage = "https://github.com/cb109/django-admin-changeform-actions"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "tox",
]
