[project]
name = "django-admin-changeform-actions"
authors = [
  { name="Christoph Buelter", email="buelter.christoph@gmail.com" },
]
version = "0.6.0"
license = "MIT"
description = "Reuse model admin changelist actions on changeform pages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.hatch.build.targets.wheel]
packages = ["changeform_actions"]

[project.urls]
Homepage = "https://github.com/cb109/django-admin-changeform-actions"

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pytest",
    "pytest-django",
    "ruff>=0.15.5",
    "tox",
]

[tool.ruff]
lint.select = [ "B", "E4", "E7", "E9", "F", "Q", "T100" ]
